Update to min ee of 1.8