@@ -36,38 +36,50 @@ public class ColaInsertionTransformationStategy implements ColaTransformationStr
 	}
 
 	/**
-	 * Resolves two conflicting <code>ColaDocumentChangeMessage</code>s by applying an appropriate operational transform.
+	 * Resolves two conflicting <code>ColaDocumentChangeMessage</code>s by
+	 * applying an appropriate operational transform.
 	 * 
-	 * If necessary, modifies <code>localAppliedMsg</code> as well to reflect knowledge of <code>remoteIncomingMsg</code> 
-	 * in case more conflicting/further diverging remote messages arrive.  
+	 * If necessary, modifies <code>localAppliedMsg</code> as well to reflect
+	 * knowledge of <code>remoteIncomingMsg</code> in case more
+	 * conflicting/further diverging remote messages arrive.
 	 * 
-	 * @param remoteIncomingMsg message originating from remote site, generated on same document state as <code>localAppliedMsg</code>
-	 * @param localAppliedMsg message already applied to local document, generation state corresponds to that of <code>remoteIncomingMsg</code>
-	 * @param localMsgHighPrio determines insertion preference for same offsets, if true localAppliedMsg comes first
-	 * @return operational transform of remote message, not conflicting with applied local message
+	 * @param remoteIncomingMsg message originating from remote site, generated
+	 * on same document state as <code>localAppliedMsg</code>
+	 * @param localAppliedMsg message already applied to local document,
+	 * generation state corresponds to that of <code>remoteIncomingMsg</code>
+	 * @param localMsgHighPrio determines insertion preference for same offsets,
+	 * if true localAppliedMsg comes first
+	 * @return operational transform of remote message, not conflicting with
+	 * applied local message
 	 */
-	public ColaDocumentChangeMessage getOperationalTransform(ColaDocumentChangeMessage remoteIncomingMsg, ColaDocumentChangeMessage localAppliedMsg, boolean localMsgHighPrio) {
+	public ColaDocumentChangeMessage getOperationalTransform(ColaDocumentChangeMessage remoteIncomingMsg,
+			ColaDocumentChangeMessage localAppliedMsg, boolean localMsgHighPrio) {
 
-		Trace.entering(Activator.PLUGIN_ID, SyncDebugOptions.METHODS_ENTERING, this.getClass(), "getOperationalTransform", new Object[] {remoteIncomingMsg, localAppliedMsg, new Boolean(localMsgHighPrio)}); //$NON-NLS-1$
+		Trace.entering(Activator.PLUGIN_ID, SyncDebugOptions.METHODS_ENTERING, this.getClass(),
+				"getOperationalTransform", //$NON-NLS-1$
+				new Object[] { remoteIncomingMsg, localAppliedMsg, Boolean.valueOf(localMsgHighPrio) });
 
 		final ColaDocumentChangeMessage remoteTransformedMsg = remoteIncomingMsg;
 
 		if (localAppliedMsg.isInsertion()) {
 
 			if (remoteTransformedMsg.getOffset() < localAppliedMsg.getOffset()) {
-				//coopt(remote(low),local(high)) --> (remote(low),local(low + high))
+				// coopt(remote(low),local(high)) --> (remote(low),local(low +
+				// high))
 				localAppliedMsg.setOffset(localAppliedMsg.getOffset() + remoteTransformedMsg.getOffset());
 			} else if (remoteTransformedMsg.getOffset() == localAppliedMsg.getOffset()) {
-				//coopt(remote(same),local(same))
+				// coopt(remote(same),local(same))
 				if (localMsgHighPrio) {
-					//at owner --> (remote(high),local(same))
-					remoteTransformedMsg.setOffset(remoteTransformedMsg.getOffset() + localAppliedMsg.getText().length());
+					// at owner --> (remote(high),local(same))
+					remoteTransformedMsg
+							.setOffset(remoteTransformedMsg.getOffset() + localAppliedMsg.getText().length());
 				} else {
-					//at participant --> (remote(same),local(high))
+					// at participant --> (remote(same),local(high))
 					localAppliedMsg.setOffset(localAppliedMsg.getOffset() + remoteTransformedMsg.getText().length());
 				}
 			} else if (remoteTransformedMsg.getOffset() > localAppliedMsg.getOffset()) {
-				//coopt(remote(high),local(low)) --> (remote(low + high),local(low))
+				// coopt(remote(high),local(low)) --> (remote(low +
+				// high),local(low))
 				remoteTransformedMsg.setOffset(remoteTransformedMsg.getOffset() + localAppliedMsg.getText().length());
 			}
 
@@ -79,18 +91,30 @@ public class ColaInsertionTransformationStategy implements ColaTransformationStr
 
 			} else if (remoteTransformedMsg.getOffset() > localAppliedMsg.getOffset()) {
 
-				if (remoteTransformedMsg.getOffset() > (localAppliedMsg.getOffset() + localAppliedMsg.getLengthOfReplacedText())) {
+				if (remoteTransformedMsg
+						.getOffset() > (localAppliedMsg.getOffset() + localAppliedMsg.getLengthOfReplacedText())) {
 
-					remoteTransformedMsg.setOffset(remoteTransformedMsg.getOffset() - localAppliedMsg.getLengthOfReplacedText());
-				} else if (remoteTransformedMsg.getOffset() <= (localAppliedMsg.getOffset() + localAppliedMsg.getLengthOfReplacedText())) {
+					remoteTransformedMsg
+							.setOffset(remoteTransformedMsg.getOffset() - localAppliedMsg.getLengthOfReplacedText());
+				} else if (remoteTransformedMsg
+						.getOffset() <= (localAppliedMsg.getOffset() + localAppliedMsg.getLengthOfReplacedText())) {
 
-					//TODO test this ^#$%^#$ case
-					final DocumentChangeMessage deletionFirstMessage = new DocumentChangeMessage(localAppliedMsg.getOffset(), remoteTransformedMsg.getOffset() - localAppliedMsg.getOffset(), localAppliedMsg.getText());
-					final ColaDocumentChangeMessage deletionFirstPart = new ColaDocumentChangeMessage(deletionFirstMessage, localAppliedMsg.getLocalOperationsCount(), localAppliedMsg.getRemoteOperationsCount());
+					// TODO test this ^#$%^#$ case
+					final DocumentChangeMessage deletionFirstMessage = new DocumentChangeMessage(
+							localAppliedMsg.getOffset(), remoteTransformedMsg.getOffset() - localAppliedMsg.getOffset(),
+							localAppliedMsg.getText());
+					final ColaDocumentChangeMessage deletionFirstPart = new ColaDocumentChangeMessage(
+							deletionFirstMessage, localAppliedMsg.getLocalOperationsCount(),
+							localAppliedMsg.getRemoteOperationsCount());
 					localAppliedMsg.addToSplitUpRepresentation(deletionFirstPart);
 
-					final DocumentChangeMessage deletionSecondMessage = new DocumentChangeMessage(localAppliedMsg.getOffset() + remoteTransformedMsg.getLengthOfInsertedText(), localAppliedMsg.getLengthOfReplacedText() - deletionFirstPart.getLengthOfReplacedText(), localAppliedMsg.getText());
-					final ColaDocumentChangeMessage deletionSecondPart = new ColaDocumentChangeMessage(deletionSecondMessage, localAppliedMsg.getLocalOperationsCount(), localAppliedMsg.getRemoteOperationsCount());
+					final DocumentChangeMessage deletionSecondMessage = new DocumentChangeMessage(
+							localAppliedMsg.getOffset() + remoteTransformedMsg.getLengthOfInsertedText(),
+							localAppliedMsg.getLengthOfReplacedText() - deletionFirstPart.getLengthOfReplacedText(),
+							localAppliedMsg.getText());
+					final ColaDocumentChangeMessage deletionSecondPart = new ColaDocumentChangeMessage(
+							deletionSecondMessage, localAppliedMsg.getLocalOperationsCount(),
+							localAppliedMsg.getRemoteOperationsCount());
 					localAppliedMsg.addToSplitUpRepresentation(deletionSecondPart);
 
 					localAppliedMsg.setSplitUp(true);
@@ -101,7 +125,8 @@ public class ColaInsertionTransformationStategy implements ColaTransformationStr
 			}
 		}
 
-		Trace.exiting(Activator.PLUGIN_ID, SyncDebugOptions.METHODS_EXITING, this.getClass(), "getOperationalTransform", remoteTransformedMsg); //$NON-NLS-1$
+		Trace.exiting(Activator.PLUGIN_ID, SyncDebugOptions.METHODS_EXITING, this.getClass(), "getOperationalTransform", //$NON-NLS-1$
+				remoteTransformedMsg);
 		return remoteTransformedMsg;
 	}
 }
